<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DisplayActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/infoLabel"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name_label"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewName"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Email_label"
        android:id="@+id/textView4"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewEmail"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignLeft="@+id/textViewName"
        android:layout_alignStart="@+id/textViewName"
        android:layout_alignRight="@+id/textViewDept"
        android:layout_alignEnd="@+id/textViewDept" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Dep_label"
        android:id="@+id/textView5"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewDept"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_gravity="right"
        android:layout_toRightOf="@+id/textView5"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/moodLabel"
        android:id="@+id/textView6"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/textView2"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignEnd="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewmood"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewName"
        android:layout_alignTop="@+id/textViewName"
        android:src="@drawable/ic_action_edit"
        android:layout_above="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewEmail"
        android:src="@drawable/ic_action_edit"
        android:layout_alignTop="@+id/textViewEmail"
        android:layout_alignLeft="@+id/imageViewName"
        android:layout_alignStart="@+id/imageViewName"
        android:layout_above="@+id/textView5"
        android:layout_alignRight="@+id/imageViewName"
        android:layout_alignEnd="@+id/imageViewName" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewDept"
        android:src="@drawable/ic_action_edit"
        android:layout_alignTop="@+id/textViewDept"
        android:layout_alignLeft="@+id/imageViewEmail"
        android:layout_alignStart="@+id/imageViewEmail"
        android:layout_alignBottom="@+id/textViewDept"
        android:layout_alignRight="@+id/imageViewEmail"
        android:layout_alignEnd="@+id/imageViewEmail" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewMood"
        android:src="@drawable/ic_action_edit"
        android:layout_alignBottom="@+id/textViewmood"
        android:layout_alignRight="@+id/imageViewDept"
        android:layout_alignEnd="@+id/imageViewDept"
        android:layout_alignTop="@+id/textViewmood"
        android:layout_alignLeft="@+id/imageViewDept"
        android:layout_alignStart="@+id/imageViewDept" />

</RelativeLayout>
